Fixed paddings on mobile and tablet

--- a/components/StoryCards/HighlightedStoryCard.module.scss
+++ b/components/StoryCards/HighlightedStoryCard.module.scss
@@ -59,11 +59,11 @@
 }
 
 .content {
-    padding: $spacing-8 $spacing-4;
+    padding: $spacing-7 $spacing-4;
     z-index: 2;
 
     @include tablet-up {
-        padding: $spacing-8 $spacing-5;
+        padding: $spacing-7 $spacing-5;
     }
 
     @include desktop-up {
